kustomize/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webcard
spec:
  replicas: 3
  minReadySeconds: 3
  revisionHistoryLimit: 
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: webcard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webcard
    spec:
      containers:
      - name: webcard-pod
        image: kashapovd/webcard:latest
        resources:
          limits:
            cpu: 2000m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 64Mi
      imagePullSecrets:
      - name: dockerhub
