kustomize/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webcard-svc
  namespace: webcard
spec:
  selector:
    app.kubernetes.io/name: webcard 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
